Closed Bug 554152 Opened 14 years ago Closed 14 years ago

Fix handling of space parameter match final spec

Categories

(Core :: JavaScript Engine, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: sayrer, Assigned: sayrer)

Details

(Whiteboard: fixed-in-tracemonkey)

Attachments

(1 file)

We weren't handling Number values correctly, or truncating to 10 characters in all cases.
tests for this are in the MS suite
Assignee: general → sayrer
Attachment #434032 - Flags: review?(jwalden+bmo)
Attachment #434032 - Attachment is patch: true
Attachment #434032 - Attachment mime type: application/octet-stream → text/plain
Comment on attachment 434032 [details] [diff] [review]
change the gap handling slightly

>diff --git a/js/src/json.cpp b/js/src/json.cpp

>+        if (clasp == &js_NumberClass || clasp == &js_StringClass) {
>+            *(gap.addr()) = obj->fslots[JSSLOT_PRIMITIVE_THIS];
>+        }

No braces around single-line if, no parentheses around |gap.addr()|.
Attachment #434032 - Flags: review?(jwalden+bmo) → review+
http://hg.mozilla.org/tracemonkey/rev/b8acc9cb4afb
Whiteboard: fixed-in-tracemonkey
http://hg.mozilla.org/mozilla-central/rev/b8acc9cb4afb
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: