Bug 554152: Fix handling of space parameter match final spec. r=waldo